# nbt2dict

./: .gitignore  CMakeLists.txt  LICENSE  MANIFEST.in  README.md  _nbt2dict.c  example.py  example_data.txt  main.py  nbt2dict.c  pyproject.toml  setup.py
.github/workflows/: publish.yml
