[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nbt2dict"
version = "0.1.0"
description = "Python C extension to efficiently decode NBT data into a dictionary."
readme = "README.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "ch-iv", email = "example@example.com"},
]
keywords = ["nbt", "minecraft", "hypixel", "skyblock", "binary", "minecraft-data"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/ch-iv/nbt2dict"
"Bug Tracker" = "https://github.com/ch-iv/nbt2dict/issues"
Documentation = "https://github.com/ch-iv/nbt2dict#readme"
